Async methods of notification service transferred to Kafka