@@ -1,11 +1,11 @@
 package ru.checkdev.notification.service;
 
 import lombok.AllArgsConstructor;
+import org.springframework.kafka.annotation.KafkaListener;
 import org.springframework.stereotype.Service;
 import ru.checkdev.notification.domain.SubscribeTopic;
 import ru.checkdev.notification.repository.SubscribeTopicRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -16,20 +16,21 @@ public class SubscribeTopicService {
         return repository.findAll();
     }
 
-    public SubscribeTopic save(SubscribeTopic subscribeTopic) {
-        return repository.save(subscribeTopic);
+    @KafkaListener(topics = "subscribeTopic_add")
+    public void save(SubscribeTopic subscribeTopic) {
+        repository.save(subscribeTopic);
     }
 
     public List<Integer> findTopicByUserId(int userId) {
         return repository.findByUserId(userId).stream()
-                .map(x -> x.getTopicId())
-                .collect(Collectors.toList());
+                .map(SubscribeTopic::getTopicId)
+                .toList();
     }
 
-    public SubscribeTopic delete(SubscribeTopic subscribeTopic) {
+    @KafkaListener(topics = "subscribeTopic_delete")
+    public void delete(SubscribeTopic subscribeTopic) {
         SubscribeTopic rsl = repository
                 .findByUserIdAndTopicId(subscribeTopic.getUserId(), subscribeTopic.getTopicId());
         repository.delete(rsl);
-        return subscribeTopic;
     }
 }
